--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@nuxtjs/fontawesome": "^1.1.2",
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "sass": "^1.41.1",
     "sass-loader": "^10.2.0"
   },
