--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "sass": "^1.41.1",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "tailwindcss": "^2.2.16"
   },
   "repository": {
     "type": "git",
